mongodb_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels: 
    app: mongodb
spec:               # Specifications for a DEPLOYMENT
  replicas: 1
  selector:
    matchLabels: 
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:             # Specifications for a POD
      containers:
      - name: mongodb
        image: mongo                        ## Almost same for all config file ## 
        ports:
        - containerPort: 27017              # Default port
